<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".menus.ActivityContacto">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_hint_nombre"
            android:layout_marginTop="@dimen/distancia_superior_hints"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_hint_correo"
            android:layout_marginTop="@dimen/distancia_superior_hints"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_hint_mensaje"
            android:layout_marginTop="@dimen/distancia_superior_hints"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/botonSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_enviar_comentario"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/distancia_superior_boton"
        android:textSize="@dimen/texto_botones" />

</LinearLayout>
