<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".menus.ActivityConfigurarCuenta">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_configurar_cuenta"
        android:textSize="@dimen/texto_letrero_configurar_cuenta"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputConfigurarCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_escribir_usuario"
            android:paddingTop="@dimen/distancia_superior_input_configurar_cuenta"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/botonGuardarCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar_cuenta"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/distancia_superior_boton"
        android:textSize="@dimen/texto_botones"
        android:layout_gravity="center"
        android:onClick="guardarCuenta"
        />

</LinearLayout>
